generate coverage report

--- a/.github/workflows/extended.yml
+++ b/.github/workflows/extended.yml
@@ -7,9 +7,6 @@ on:
 jobs:
   test_report:
     runs-on: ubuntu-latest
-    env:
-      CC: gcc
-      CXX: g++
     steps:
       - name: Install tools
         run: sudo apt-get install -y ant-optional
@@ -23,3 +20,16 @@ jobs:
           ./CppUTestExtTests -ojunit
           cp ./scripts/generate_junit_report_ant.xml .
           ant -f generate_junit_report_ant.xml
+
+  cmake_coverage:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Install tools
+        run: pip install --user cpp-coveralls gcovr
+      - name: Checkout
+        uses: actions/checkout@main
+      - run: |
+          cmake -S . -B build -DCMAKE_BUILD_TYPE=Debug -DC++11=ON -DCOVERAGE=ON -DLONGLONG=ON
+          cmake --build build
+          ctest --test-dir build
+          coveralls -b build -r . -i "src" -i "include" --gcov-options="-lbc" || true
