--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,12 @@ option(CPPUTEST_FLAGS "Use the CFLAGS/CXXFLAGS/LDFLAGS set by CppUTest" ON)
 cmake_dependent_option(CPPUTEST_MEM_LEAK_DETECTION_DISABLED "Enable memory leak detection"
   OFF "NOT BORLAND;NOT CPPUTEST_STD_C_LIB_DISABLED" ON)
 option(CPPUTEST_EXTENSIONS "Use the CppUTest extension library" ON)
-option(LONGLONG "Support long long" OFF)
+
+include(CheckTypeSize)
+check_type_size("long long" SIZEOF_LONGLONG)
+cmake_dependent_option(CPPUTEST_USE_LONG_LONG "Support long long"
+  YES "HAVE_SIZEOF_LONGLONG" OFF)
+
 option(MAP_FILE "Enable the creation of a map file" OFF)
 option(COVERAGE "Enable running with coverage" OFF)
 cmake_dependent_option(CPPUTEST_WERROR
@@ -260,7 +265,7 @@ Current compiler options:
 Features configured in CppUTest:
     Memory Leak Detection Disabled:     ${CPPUTEST_MEM_LEAK_DETECTION_DISABLED}
     Compiling Extensions:               ${CPPUTEST_EXTENSIONS}
-    Support Long Long:                  ${LONGLONG}
+    Support Long Long:                  ${CPPUTEST_USE_LONG_LONG}
     Use CppUTest flags:                 ${CPPUTEST_FLAGS}
 
     Disable Standard C library:         ${CPPUTEST_STD_C_LIB_DISABLED}
