--- a/.github/workflows/extended.yml
+++ b/.github/workflows/extended.yml
@@ -37,7 +37,7 @@ jobs:
           -B cpputest_build
           -D CMAKE_BUILD_TYPE=Debug
           -D CMAKE_CXX_STANDARD=11
-          -D COVERAGE=ON
+          -D CPPUTEST_COVERAGE=ON
       - name: Build
         run: cmake --build cpputest_build
       - name: Test
