omit system header coverage

--- a/.github/workflows/extended.yml
+++ b/.github/workflows/extended.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Test
         run: ctest --test-dir cpputest_build
       - name: Coverage
-        run: lcov --capture --directory . --output-file lcov.info
+        run: lcov --capture --directory . --no-external --output-file lcov.info
       - name: Coveralls
         uses: coverallsapp/github-action@master
         with:
