Repair module search path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,13 +76,15 @@ if(LIBNAME_POSTFIX_BITSIZE)
   endif()
 endif(LIBNAME_POSTFIX_BITSIZE)
 
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CppUTestRootDirectory}/cmake/Modules)
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules")
+if(NOT PROJECT_IS_TOP_LEVEL)
+  set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" PARENT_SCOPE)
+endif()
 
-include("${CppUTestRootDirectory}/cmake/Modules/CppUTestConfigurationOptions.cmake")
+include(CppUTestConfigurationOptions)
 include(CTest)
-#include("${CppUTestRootDirectory}/cmake/Modules/CheckFunctionExists.cmake")
-include("${CppUTestRootDirectory}/cmake/Modules/CppUTestBuildTimeDiscoverTests.cmake")
-include("${CppUTestRootDirectory}/cmake/Modules/CppUTestNormalizeTestOutputLocation.cmake")
+include(CppUTestBuildTimeDiscoverTests)
+include(CppUTestNormalizeTestOutputLocation)
 include(GNUInstallDirs)
 
 enable_testing()
