--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -6,6 +6,16 @@ on:
   pull_request:
 
 jobs:
+  clang-format:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@main
+      - uses: DoozyX/clang-format-lint-action@v0.14
+        with:
+          clangFormatVersion: 14
+          source: examples
+
   automake:
     strategy:
       matrix:
