--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -118,7 +118,22 @@ jobs:
           -B build
           -S .
           -D CMAKE_CXX_STANDARD=${{ matrix.cpp_version }}
-        if: ${{ matrix.cpp_version }}
+      - name: Build
+        run: cmake --build build --verbose
+      - name: Test
+        run: ctest --test-dir build
+
+  visualstudio-clangcl:
+    runs-on: windows-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@main
+      - name: Configure
+        run: >
+          cmake
+          -B build
+          -G "Visual Studio 17 2022"
+          -T ClangCL
       - name: Build
         run: cmake --build build --verbose
       - name: Test
