--- a/.github/workflows/extended.yml
+++ b/.github/workflows/extended.yml
@@ -140,7 +140,11 @@ jobs:
         uses: actions/checkout@main
       - uses: carlosperate/arm-none-eabi-gcc-action@v1
       - name: Install QEMU
-        run: sudo apt-get install -y --no-install-recommends qemu-user-static
+        # The version in the ubuntu repositories (6.2) is broken.
+        run: |
+          wget -nv http://ftp.de.debian.org/debian/pool/main/q/qemu/qemu-user-static_7.1+dfsg-2_amd64.deb -O qemu.deb
+          sudo dpkg --install qemu.deb
+          rm -f qemu.deb
       - name: Configure
         run: >
           cmake
