--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: DoozyX/clang-format-lint-action@v0.14
         with:
           clangFormatVersion: 14
-          source: examples src/CppUTestExt include/CppUTestExt
+          source: examples
 
   automake:
     strategy:
