add missing platforms

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,6 +81,10 @@ else()
     set(CPP_PLATFORM VisualCpp)
   elseif(CMAKE_CXX_COMPILER_ID STREQUAL "IAR")
     set(CPP_PLATFORM Iar)
+  elseif(CMAKE_CXX_COMPILER_ID STREQUAL "ARMCC")
+    set(CPP_PLATFORM armcc)
+  elseif(DOS)
+    set(CPP_PLATFORM Dos)
   elseif(BORLAND)
     set(CPP_PLATFORM Borland)
   elseif(CPPUTEST_STD_C_LIB_DISABLED)
